--- a/spiro/index.html
+++ b/spiro/index.html
@@ -10,6 +10,7 @@
     <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#1A1A2E">
     <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="mobile-web-app-capable" content="yes">
     <meta name="description" content="A customizable spirograph pattern generator with multiple rotating nodes.">
 
     <style>
