Remove unused service worker status element

--- a/btc/test/index.html
+++ b/btc/test/index.html
@@ -406,7 +406,6 @@
             <canvas id="priceChartCanvas"></canvas>
         </div>
         <div id="statusMessage" class="status-message"></div>
-        <div id="swStatus" class="status-message"></div>
     </div>
 
     <div id="configModal" class="modal">
@@ -477,7 +476,6 @@
         const volume24hEl = document.getElementById('volume24h');
         const marketCapEl = document.getElementById('marketCap');
         const statusMessageEl = document.getElementById('statusMessage');
-        const swStatusEl = document.getElementById('swStatus');
         const timeframeSelectEl = document.getElementById('timeframeSelect');
         const priceChartCanvas = document.getElementById('priceChartCanvas');
         const priceChartContainer = document.getElementById('priceChartContainer');
@@ -720,10 +718,10 @@
         }
 
         function setSwStatus(message, type = '') {
-            if (!swStatusEl) return;
-            swStatusEl.textContent = message;
-            swStatusEl.className = `status-message ${type}`.trim();
-            swStatusEl.style.display = message ? 'block' : 'none';
+            const logFn = type === 'error' ? console.error : console.log;
+            if (message) {
+                logFn('[SW]', message);
+            }
         }
 
         function formatCurrency(value, fractionDigits = 2) {
@@ -1849,7 +1847,6 @@
             populateVoiceDropdown();
             loadConfig();
             applyAccentColor();
-            setSwStatus('');
 
             if (!config.apiKey) {
                 setStatus('Welcome! Please configure your API Key to get started.', 'loading');
