KREFT.US Descriptions Updated

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                     <td class="project-text-cell">
                         <a href="./snake/" tabindex="-1"> <div>
                                 <h2>Snake VS</h2>
-                                <p><b>Snake VS v1.3:</b> Eat food, grow, & outlast opponents! Modes: VS AI, 2 Player, & 6-Snake Battle Royale (dead snakes become food, rankings at end). <b>Controls:</b> P1 (All Modes): WASD/Arrows or Swipe (2P: bottom half). P2 (2P Mode): Arrows or Swipe top half. Last snake alive wins (or highest rank in Battle)!</p>
+                                <p><b>Snake VS v1.4</b> - A multiplayer & AI snake game. <b>VS AI:</b> Outlast an AI opponent that speeds up as you level. <b>2 Player:</b> Compete on one device using keyboard (WASD/Arrows) or split-screen touch. <b>Battle Royale:</b> Be the last survivor against 5 AIs with unique behaviors; defeated snakes turn into food. <b>AI Types:</b> Battle Royale AIs have distinct personalities (standard, erratic, defensive, etc.). <b>Controls:</b> P1 uses WASD/Swipe, P2 uses Arrows/Top-Screen. Pause with Spacebar. <b>Tips & Details:</b> Tips & Further detail located in source-code</source-code></p>
                             </div>
                         </a>
                     </td>
@@ -158,7 +158,7 @@
                         <a href="./gol/" tabindex="-1">
                             <div>
                                 <h2>Conway's Game of Life</h2>
-                                <p><b>Conway's Game of Life:</b> A cellular automaton where cells live/die based on neighbor counts (2-3 to survive, 3 to be born).<br/><b>Features:</b> Play/Pause/Step/Reset, Pattern Selector, Wrapped/Infinite Modes, Speed Control, Pan & Zoom (Slider/Mousewheel/Pinch), Click-to-Draw, Save/Restore Grid, Population/Step Counters, Responsive Design, & Colorful Cell Aging.</p>
+                                <p><b>Conway's Game of Life:</b> A cellular automaton where cells live/die based on neighbor counts (2-3 to survive, 3 to be born).<br/><b>Features:</b> Play/Pause/Step/Reset, Pattern Selector, Wrapped/Infinite Modes, Speed Control, Pan & Zoom (Slider/Mousewheel/Pinch), Click-to-Draw, Save/Restore Grid, Population/Step Counters, Responsive Design, & Colorful Cell Aging. <b>Tip:</b> Console includes additional telemetry</p>
                             </div>
                         </a>
                     </td>
@@ -188,7 +188,7 @@
                         <a href="./spiro/" tabindex="-1">
                             <div>
                                 <h2>SpiroGen</h2>
-                                <p><b>SpiroGen v2.2:</b> Create art with up to 4 nodes, pan/zoom, persistent traces, Node 1 fixed mode & starting angle, PWA support, Memory, and PNG download.</p>
+                                <p><b>SpiroGen v2.2:</b> Create art with up to 4 nodes, pan/zoom, persistent traces, Node 1 fixed mode & starting angle (with math support for precision), PWA support, Memory, and PNG download.</p>
                             </div>
                         </a>
                     </td>
